# AnalysisTreeQA

./: .gitignore  CMakeLists.txt  README.md  dir_ff2f1db7d3fcf6d9810be7915ed78eb1.html  doxygen_crawl.html  graph_legend.html  index.html
.github/workflows/: cmake.yml
cmake/: AnalysisTree.cmake  Boost.cmake  ROOT.cmake  YamlCpp.cmake
cmake_modules/: AnalysisTree.cmake  AnalysisTreeQAConfig.sh.in  YamlCpp.cmake  analysistree.cmake  plots_maker.cmake
examples/: CMakeLists.txt  example.cpp  example.yaml  example_yaml.cpp
src/: AnalysisTreeQALinkDef.h  Axis.cpp  Axis.cxx  Axis.h  Axis.hpp  BasicQA.hpp  CMakeLists.txt  Constants.h  EntryConfig.cpp  EntryConfig.cxx  EntryConfig.h  EntryConfig.hpp  Manager.cpp  Manager.cxx  Manager.hpp  Manager.test.hpp  Task.cpp  Task.cxx  Task.h  Task.hpp  Utils.h  Utils.hpp  VariantMagic.hpp  YamlReader.cpp  YamlReader.hpp
tasks/: CMakeLists.txt  cbm_qa.cpp
test/: CMakeLists.txt  test_runner.cxx
test/core/: TestCore.h
test/integration/: Manager.test.hpp
